# iitmbsvideosdownloader

./: IITM BS Videos Downloader.md  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.eggs/: atomicwrites-1.4.1-py3.8.egg
.eggs/pluggy-1.0.0-py3.8.egg/EGG-INFO/: requires.txt
.eggs/wheel-0.40.0-py3.10.egg/EGG-INFO/: RECORD
iitmbsvideosdownloader/: SITES.py  SUBJECTS.py  _downloader.py  _functions.py  _iitm.py  _variables.py  _y2mate.py  iitmbsvideosdownloader.py
iitmbsvideosdownloader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: SITES.py  _downloader.py  _functions.py  _iitm.py  _y2mate.py  iitmbsvideosdownloader.py
tests/: test_iitmbsvideosdownloader.py
